@@ -28,5 +28,5 @@
 		"page": "options.html"
 	},
 	"permissions": [ "cookies", "<all_urls>", "storage", "webRequest", "webRequestBlocking"],
-	"version": "1.2.6"
+	"version": "1.2.7"
 }
