@@ -15,7 +15,7 @@
 <body>
   <div>
     Selected sites will have their cookies cleared and referer set to Google. You should
-    uncheck sites you have an account with or else you will be logged out at every visit.
+    uncheck sites you are logged in to otherwise you will be logged out on every visit.
   </div>
   <br/>
   <div id='bypass_sites'>
