@@ -1,5 +1,6 @@
 Updates--
 
+2018-06-03 v1.2.7: Added Wired (wired.com)
 2018-05-20 v1.2.6: Added TheMarker (themarker.com)
 2018-05-12 v1.2.5: Fixed Boston Globe (bostonglobe.com)
 2018-05-10 v1.2.4: Fixed redirect issue
@@ -57,3 +58,4 @@ The Seattle Times (seattletimes.com)
 The Sydney Morning Herald (smh.com.au)
 The Washington Post (washingtonpost.com)
 The Wall Street Journal (wsj.com)
+Wired (wired.com)
